--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -19,9 +19,7 @@ main {
   top: 110px;
   height: 500vh;
 }
-footer {
-  height: 300px;
-}
+
 /**전체 css 끝  */
 
 .nav_bar {
@@ -32,6 +30,7 @@ footer {
   align-items: center;
   justify-content: space-evenly;
   background-color: #f6f5ef;
+  z-index: 99;
 }
 .nav_category {
   display: flex;
@@ -69,7 +68,7 @@ footer {
   float: left;
 }
 ul > .down_nav_category {
-  width: 20%;
+  width: 25%;
   text-align: center;
   line-height: 40px;
 }
