--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,10 @@
 main {
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .login_wrap {
@@ -36,7 +40,7 @@ main {
   position: absolute;
   top: 0px;
   left: 50%;
-  width: 23%;
+  width: 25%;
   transform: translate(-50%, 5%);
   font-size: 40px;
   text-align: center;
