--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,69 @@ i {
   cursor: pointer;
 }
 
+/** 프로모션 슬라이드 css*/
+.pd_slider img {
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+}
+
+.promotion_dropdown {
+  width: 100%;
+  height: 100%;
+  max-width: 626px;
+  max-height: 670px;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  position: relative;
+}
+.promotion_dropdown > .pd_slider_wrap {
+  overflow: hidden;
+}
+.promotion_dropdown > .pd_slider_wrap .pd_slider {
+  position: relative;
+  transition: 0.5s;
+}
+.promotion_dropdown > .pd_slider_wrap > .pd_slider > .pd_slider_li {
+  float: left;
+}
+
+.pd_slider_ttl {
+  font-weight: 800;
+}
+.pd_slider_li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.pd_slider_li p {
+  font-size: 12px;
+}
+.pd_slider_seemore {
+  border: 2px solid black;
+  border-radius: 3px;
+  margin-top: 10px;
+  width: 130px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.promotion_dropdown > .pd_arrow a.prev {
+  position: absolute;
+  left: -50px;
+  top: 200px;
+}
+
+.promotion_dropdown > .pd_arrow a.next {
+  position: absolute;
+  right: -50px;
+  top: 200px;
+}
+
 /** 리워즈 회원가입과 로그인 e-gift card css */
 
 .rewards_gift_card {
