--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -40,14 +40,29 @@ main {
   width: 100%;
   height: 100%;
 }
+.nav_bar > a > img {
+  width: 120px;
+  height: 120px;
+  margin-left: 20px;
+}
 /***********  네비게이션 상단 부분 시작 top_nav */
 .top_nav > ul > li {
   float: left;
+  margin-left: 15px;
+  text-decoration: none;
 }
-
+.top_nav > ul > li > a {
+  color: black;
+}
+.top_nav > ul > li > a:hover {
+  color: green;
+}
 .top_nav {
-  width: 100%;
+  width: 90%;
   height: 20px;
+  margin-bottom: 20px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
 }
 /***********  네비게이션 상단 부분 끝 top_nav */
 
